<resources>
    <string name="app_name">Furniture</string>

    <!--boarding-->
    <string name="makeyour">make your</string>
    <string name="homebeauti">home beautiful</string>
    <string name="intro_board">\t\t\tThe best simple place where you discover most wonderful furnitures and make your home beautiful</string>
    <string name="get_started">Get Started</string>

    <!--sign_in sign_up-->
    <string name="hello">Hello !</string>
    <string name="welcome_back">welcome back</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="register">Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome">welcome</string>
    <string name="name_hint">Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="already_have_ac">Already have account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Account fragment-->
    <string name="sample_email">bruno123@gmail.com</string>
    <string name="sample_user_name">Bruno Fernandes</string>
    <string name="order_history">Order History</string>
    <string name="order_history_desc">Your recent orders</string>
    <string name="shipping_add">Shipping Address</string>
    <string name="shipping_add_desc">01 Addresses</string>
    <string name="setting_desc"> Personal Information, Notification, FAQ</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_desc">You have 2 cards</string>


    <!--Setting activity-->
    <string name="setting_title">Setting</string>
    <string name="person_infor">Personal Information</string>
    <string name="sales">Sales</string>
    <string name="delivery_stus_hint">Delivery status changes</string>
    <string name="help_cent_hint">Help Center</string>
    <string name="faq_hint">faq</string>
    <string name="notification_hint">Notifications</string>

</resources>