<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.SignInActivity">


    <include layout="@layout/header_login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginTop="@dimen/space16"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/grey_2"
        android:textSize="@dimen/font24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginTop="@dimen/space8"
        android:fontFamily="@font/merriweather_bold"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black_1"
        android:textSize="@dimen/font24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space32"
        android:orientation="vertical"
        android:padding="@dimen/space16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/email_hint"
            android:textColor="@color/grey_2"
            android:textSize="@dimen/font14" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_2"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@null" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space16"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/password_hint"
            android:textColor="@color/grey_2"
            android:textSize="@dimen/font14" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space8"
            android:backgroundTint="@color/grey_2"
            android:inputType="textPassword"
            android:textCursorDrawable="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space16"
            android:fontFamily="@font/nunitosans_semibold"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/black_1"
            android:textSize="@dimen/font18" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space32"
            android:backgroundTint="@color/black_1"
            android:fontFamily="@font/nunitosans_semibold"
            android:padding="@dimen/space16"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font18" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space8"
            android:fontFamily="@font/nunitosans_semibold"
            android:padding="@dimen/space16"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black_1"
            android:textSize="@dimen/font18" />
    </LinearLayout>
</LinearLayout>