<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FlashActivity"
    android:gravity="center"
    android:background="@drawable/boarding"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginRight="@dimen/space16"
        android:fontFamily="@font/gelasio_semibold"
        android:text="@string/makeyour"
        android:textAllCaps="true"
        android:textColor="@color/grey_1"
        android:textSize="@dimen/font24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space16"
        android:layout_marginTop="@dimen/space8"
        android:layout_marginRight="@dimen/space16"
        android:fontFamily="@font/gelasio_bold"
        android:text="@string/homebeauti"
        android:textAllCaps="true"
        android:textColor="@color/black_1"
        android:textSize="@dimen/font30" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space32"
        android:layout_marginTop="@dimen/space16"
        android:layout_marginRight="@dimen/space32"
        android:fontFamily="@font/nunitosans_regular"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="@dimen/space8"
        android:text="@string/intro_board"
        android:textColor="@color/grey_2"
        android:textSize="@dimen/font18" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStart"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/black_1"
        android:fontFamily="@font/gelasio_semibold"
        android:padding="@dimen/space16"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font18" />

</LinearLayout>